--- a/juego_PPT/app/src/main/res/values/colors.xml
+++ b/juego_PPT/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <!-- App -->
     <color name="bgActivity">#000000</color>
     <color name="green1">#89BF24</color>
+    <color name="btnStop">#BF2424</color>
+
 
     <color name="bgSecundary">#8C8C8C</color>
 </resources>
